   browser delay on displaying a big directory, e.g. /usr/bin.
 * src/build.c:
   Expand command entry width when expanding Build Commands dialog.
 * src/build.c:
   Split Build Commands dialog notes label and edit text.
 * src/build.c:
   Add padding for Build Commands dialog separators.
   Add colons for regex field labels; fix 1 capitalisation.


2009-09-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/filetypes.c, src/filetypes.h, src/symbols.c,
   tagmanager/parsers.h, tagmanager/makefile.win32,
   tagmanager/abc.c, tagmanager/Makefile.am, data/filetypes.abc,
   data/filetype_extensions.conf, wscript:
   Add new filetype: Abc (patch by Eric Forgeot, thanks).
 * tagmanager/php.c:
   Merge recent changes from the CTags project to further improve
   PHP symbol parsing.


2009-09-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/printing.c:
   Fix wrong alignment of printed pages when page headers are
   disabled (closes #2856822).
   Plug a small memory leak and improve function signature of
   add_page_header().
 * src/keyfile.c:
   Save an if expression.
 * src/ui_utils.c:
   After clearing a text field using the embedded clear icon, put the
   input focus into this text field.


2009-09-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/filebrowser.c:
   Free file list memory whilst iterating the list.
   Minor formatting fixes.
 * src/utils.c, src/utils.h:
   Add foreach_dir() API macro.
   Update API docs for utils_get_file_list().
 * wscript, src/queue.c, src/editor.c, src/Makefile.am, src/queue.h,
   po/POTFILES.in:
   Remove queue.[hc] - use GQueue instead of GeanyQueue.
   Beep if there are no more snippet positions.
   Limit length of snippet positions queue to 20.


2009-09-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/callbacks.c, src/search.c:
   Make Goto Tag commands use the current selection if present (useful