@@ -10,6 +10,9 @@
  * src/build.c:
    Add padding for Build Commands dialog separators.
    Add colons for regex field labels; fix 1 capitalisation.
+ * src/build.c:
+   Fix none filetype Build Commands dialog label.
+   Make group labels bold.
 
 
 2009-09-20  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
